# ResourceManagement_CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  file_structure.drawio  testing_instructions_resource_packer.txt
Assets/: git_happy.txt
Assets/pack1/Factory 64x64/: Thumbs.db
DevDocs/: file_structure.drawio
Dev_Documentation/: file_structure.drawio
Documentation/: search_algo.drawio
Example_Raylib/: CMakeLists.txt  pack_config.json
Example_Raylib/src/: example_raylib.cpp
ResourceCommon/: CMakeLists.txt
ResourceCommon/include/: error_checker.hpp  pack_format.hpp  rm_config.hpp
ResourceCommon/src/: error_checker_environment.cpp  error_checker_packing.cpp  error_checker_utils.cpp  rm_config.cpp
ResourceLoader/: CMakeLists.txt
ResourceLoader/include/: resource_loader.hpp
ResourceLoader/src/: resource_loader.cpp
ResourcePacker/: CMakeLists.txt
ResourcePacker/_internal/: command_line_interface.hpp  environment_validator.hpp  error_checker.hpp  pack_format.h  pack_maker.hpp  package_format.h
ResourcePacker/src/: command_line_interface.cpp  environment_validator.cpp  error_checker_environment.cpp  error_checker_packaging.cpp  error_checker_utils.cpp  format_rules.txt  pack_maker.cpp  resource_packer.cpp
TestProject/: CMakeLists.txt  pack_config.json
TestProject/src/: test_project.cpp
